beta agrega cambio de status para factura anulada

--- a/app/winCompuertaGP/winCompuertaGP/App.config
+++ b/app/winCompuertaGP/winCompuertaGP/App.config
@@ -18,7 +18,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="INTEGRA50Entities" connectionString="metadata=res://*/DAL.ModelGPIntegraciones.csdl|res://*/DAL.ModelGPIntegraciones.ssdl|res://*/DAL.ModelGPIntegraciones.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=wwsqlad.centralus.cloudapp.azure.com,1433;initial catalog=INTEGRA50;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="INTEGRAGPEntities" connectionString="metadata=res://*/DAL.ModelGPIntegraciones.csdl|res://*/DAL.ModelGPIntegraciones.ssdl|res://*/DAL.ModelGPIntegraciones.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=wwsqlad.centralus.cloudapp.azure.com,1433;initial catalog=INTEGRA50;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="INTEGRA50Entities" connectionString="metadata=res://*/DAL.ModelGPIntegraciones.csdl|res://*/DAL.ModelGPIntegraciones.ssdl|res://*/DAL.ModelGPIntegraciones.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=wwsqlad.centralus.cloudapp.azure.com,1433;initial catalog=INTEGRA50;user id=sa;password=tiiSelam$18;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="INTEGRAGPEntities" connectionString="metadata=res://*/DAL.ModelGPIntegraciones.csdl|res://*/DAL.ModelGPIntegraciones.ssdl|res://*/DAL.ModelGPIntegraciones.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=wwsqlad.centralus.cloudapp.azure.com,1433;initial catalog=INTEGRA50;user id=sa;password=tiiSelam$18;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
