--- a/app/winCompuertaGP/winCompuertaGP/winCompuertaGP.csproj
+++ b/app/winCompuertaGP/winCompuertaGP/winCompuertaGP.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\IntegraGPEntities.cs" />
     <Compile Include="ErrorEventArgs.cs" />
     <Compile Include="BLL\Main.cs" />
     <Compile Include="DAL\ModelGPIntegraciones.Context.cs">
